--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Example Student's HCDE 439 Physical Computing Page!</title> 
+        <title>Michael Palomo's HCDE 439 Physical Computing Page!</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
@@ -12,12 +12,12 @@
     <body> 
 
         <div class="header">
-            <h1>Example Student's HCDE 439 Physical Computing Page!</h1>
+            <h1>Michael Palomo's HCDE 439 Physical Computing Page!</h1>
             <p>
-            <img src="red-panda.jpg" width=400></a>
+            <img src="DIX_1489.jpg" width=400></a>
             </p>
             <p>
-            My name is Example Student! I'm an HCDE major and excited to learn the following things in this class: how to be a real student, and how to change my name.
+            My name is Michael Palomo! I'm an HCDE major and excited to learn the following things in this class: how to be a create physical interactive technologies and especially enhance my knowledge of circuits and other electronic components.
             </p>
         </div>
         <div class="assignments">
