--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h1>Michael Palomo's HCDE 439 Physical Computing Page!</h1>
             <p>
-            <img src="DIX_1489.jpg" width=400></a>
+            <img src="DIX_1489.jpg" height=400 width=400></a>
             </p>
             <p>
             My name is Michael Palomo! I'm an HCDE major and excited to learn the following things in this class: how to be a create physical interactive technologies and especially enhance my knowledge of circuits and other electronic components.
