--- a/assignment1.html
+++ b/assignment1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Example Student's HCDE 439 Physical Computing Page!</title> 
+        <title>Assignment 1: Blink!</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
@@ -12,14 +12,24 @@
     <body> 
 
         <div class="header">
-            <h1>Example Student's Assignment 1!</h1>
+            <h1>Schematic</h1>
             <p>
-            <img src="red-panda.jpg" width=400></a>
-            </p>
-            <p>
-            Here is all the documentation for assignment 1!
+            <img src="a1schem.jpg" width=400></a>
             </p>
         </div>
         
+        <div class="header">
+            <h1>Code Snippet</h1>
+            <p>
+            <img src="a1codesnippet.png" width=400></a>
+            </p>
+        </div>
+
+        <div class="header">
+            <h1>Circuit Operation</h1>
+            <p>
+            <img src="a1co.HEIC" width=400></a>
+            </p>
+        </div>
     </body>
 </html>
