--- a/assignment1.html
+++ b/assignment1.html
@@ -10,25 +10,37 @@
 
     </head> 
     <body> 
+        <div class="header">
+            <h1>Assignment 1: Blink!</h1>
+            <p>See my work below!</p>
+        </div>
 
         <div class="header">
-            <h1>Schematic</h1>
+            <h2>Schematic</h2>
+            <p>
+            <img src="a1schem.jpg" width=400></a>
+            </p>
+        </div>
+
+        <div class="header">
+            <h2>Schematic</h2>
             <p>
             <img src="a1schem.jpg" width=400></a>
             </p>
         </div>
         
         <div class="header">
-            <h1>Code Snippet</h1>
+            <h2>Code Snippet</h2>
             <p>
-            <img src="a1codesnippet.png" width=400></a>
+            <img src="a1codesnippet.png" width=800></a>
             </p>
         </div>
 
         <div class="header">
-            <h1>Circuit Operation</h1>
+            <h2>Circuit Operation</h2>
             <p>
-            <img src="a1co.HEIC" width=400></a>
+            <video controls="controls" width="800" 
+            name="circuit operation" src="a1co.mov"></video>
             </p>
         </div>
     </body>
