--- a/assignment1.html
+++ b/assignment1.html
@@ -39,8 +39,7 @@
         <div class="header">
             <h2>Circuit Operation</h2>
             <p>
-            <video controls="controls" width="800" 
-            name="circuit operation" src="a1co.mov"></video>
+                <img src="a1co.gif" width=800></a>
             </p>
         </div>
     </body>
