--- a/assignment2.html
+++ b/assignment2.html
@@ -4,22 +4,43 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Example Student's HCDE 439 Physical Computing Page!</title> 
+        <title>Assignment 2: Fade</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
     </head> 
     <body> 
+        <div class="header">
+            <h1>Assignment 2: Fade</h1>
+        </div>
 
         <div class="header">
-            <h1>Example Student's Assignment 2!</h1>
+            <h2>Schematic</h2>
             <p>
-            <img src="red-panda.jpg" width=400></a>
-            </p>
-            <p>
-            Here is all the documentation for assignment 2!
+            <img src="a2schem.jpg" width=400></a>
             </p>
         </div>
         
+        <div class="header">
+            <h2>Calculations</h2>
+            <p>
+            <img src="a2calcpt1.jpg" width=400></a>
+            </p>
+            <p>
+            <img src="a2calcpt2.jpg" width=400></a>
+            </p>
+        </div>
+
+        <div class="header">
+            <h2>Code Snippet</h2>
+            <p>
+            <img src="a2code.png" width=600></a>
+            </p>
+        </div>
+
+        <div class="header">
+            <h2>Circuit Operation</h2>
+
+        </div>
     </body>
 </html>
