--- a/assignment2.html
+++ b/assignment2.html
@@ -39,8 +39,10 @@
         </div>
 
         <div class="header">
-            <h2>Circuit Operation</h2>
-
+            <h2>Circuit</h2>
+            <p>
+            <img src="a2circ.HEIC" width=600></a>
+            </p>
         </div>
     </body>
 </html>
