--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
         <div class="assignments">
 
             <div class="assignment">
-              <a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
-                  <img src="red-panda.jpg" width=250></a>
+              <a href="assignment1.html"><h2>Assignment 1: Blink!</h2></a>
                 <p>
-		Assignment 1 was a panda!
+		Assignment 1: Blink!
                 </p>
             </div>
 
             <div class="assignment">
-              <a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
-                  <img src="red-panda.jpg" width=250></a>
+              <a href="assignment2.html"><h2>Assignment 2: Fade!</h2></a>
                 <p>
-		Assignment 2 was a panda!
+		Assignment 2: Fade
+                </p>
+            </div>
+
+            <div class="assignment">
+              <a href="assignment3.html"><h2>Assignment 3: InputOutput</h2></a>
+                <p>
+		Assignment 3: InputOutput
                 </p>
             </div>
 	</div>
