--- a/assignment3.html
+++ b/assignment3.html
@@ -13,35 +13,33 @@
         <div class="header">
             <h1>Assignment 3: InputOutput</h1>
         </div>
-
+        
         <div class="header">
             <h2>Schematic</h2>
             <p>
-            <img src="a2schem.jpg" width=400></a>
-            </p>
-        </div>
-        
-        <div class="header">
-            <h2>Calculations</h2>
-            <p>
-            <img src="a2calcpt1.jpg" width=400></a>
-            </p>
-            <p>
-            <img src="a2calcpt2.jpg" width=400></a>
+            <img src="a3calc.HEIC" width=400></a>
             </p>
         </div>
 
         <div class="header">
             <h2>Code Snippet</h2>
             <p>
-            <img src="a2code.png" width=600></a>
+            <img src="a3code.png" width=600></a>
             </p>
         </div>
 
         <div class="header">
             <h2>Circuit</h2>
             <p>
-            <img src="a2circ.HEIC" width=600></a>
+            <img src="a3circ.jpg" width=600></a>
+            </p>
+        </div>
+
+        <div class="header">
+            <h2>Circuit Operation</h2>
+            <p>
+                <img src="a3circ_gif.gif" width=600></a>
+                <img src="a3ser_mon.gif" width=600></a>
             </p>
         </div>
     </body>
