--- a/assignment2.html
+++ b/assignment2.html
@@ -42,7 +42,7 @@
         <div class="header">
             <h2>Circuit</h2>
             <p>
-            <img src="a2circ.HEIC" width=600></a>
+            <img src="a2circ.jpg" width=600></a>
             </p>
         </div>
     </body>
