--- a/assignment3.html
+++ b/assignment3.html
@@ -17,7 +17,7 @@
         <div class="header">
             <h2>Schematic</h2>
             <p>
-            <img src="a3calc.HEIC" width=400></a>
+            <img src="a3calc.jpg" width=400></a>
             </p>
         </div>
 
