--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <div class="assignment">
               <a href="assignment3.html"><h2>Assignment 3: InputOutput</h2></a>
             </div>
+
+            <div class="assignment">
+                <a href="assignment4.html"><h2>Assignment 4: High(er) voltage and transistors</h2></a>
+            </div>
 	</div>
     </body>
 </html>
