--- a/assignment4.html
+++ b/assignment4.html
@@ -17,7 +17,7 @@
         <div class="header h1">
             <h2>Schematic</h2>
             <p>
-            <img src="a34alc.jpg" width=400></a>
+            <img src="a4calc.jpg" width=400></a>
             </p>
         </div>
 
