--- a/assignment4.html
+++ b/assignment4.html
@@ -24,15 +24,15 @@
         <div class="header">
             <h2>Code Snippet</h2>
             <p>
-            <img src="a4ode.png" width=600></a>
+            <img src="a4code.png" width=600></a>
             </p>
         </div>
 
         <div class="header">
             <h2>Circuit</h2>
             <p>
-            <img src="a4circ.jpg" width=600></a>
-            <img src="a4circ2.jpg" width=600></a>
+            <img src="a4circ.jpg" height=400></a>
+            <img src="a4circ2.jpg" height=400></a>
             </p>
         </div>
 
