--- a/assignment4.html
+++ b/assignment4.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Assignment 3: InputOutput</title> 
+        <title>Assignment 4: High(er) voltage and transistors</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
