--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <div class="assignment">
                 <a href="assignment4.html"><h2>Assignment 4: High(er) voltage and transistors</h2></a>
             </div>
+
+            <div class="assignment">
+                <a href="assignment5.html"><h2>Assignment 5: Motors</h2></a>
+            </div>
 	</div>
     </body>
 </html>
