updated fp idea

--- a/finalproject.html
+++ b/finalproject.html
@@ -11,37 +11,8 @@
     </head> 
     <body> 
         <div class="header">
-            <h1>Assignment 5: Motors</h1>
+            <h1>Final Project Idea</h1>
+            <p>My idea (for now) is something I can stick into food as it cools down and have different LED's signify how close the food is to being at the desired temperature.</p>>
         </div>
-        
-        <div class="header">
-            <h2>Circuit Operation</h2>
-            <p>
-                <img src="a5_operation.gif" width=600></a>
-            </p>
-        </div>
-
-        <div class="header">
-            <h2>Code Snippet</h2>
-            <p>
-            <img src="a5_code.png" width=600></a>
-            </p>
-        </div>
-
-        <div class="header h1">
-            <h2>Schematic</h2>
-            <p>
-            <img src="a5_schem.jpg" width=400></a>
-            </p>
-        </div>
-
-        <div class="header">
-            <h2>Circuit</h2>
-            <p>
-            <img src="a5_circ.jpg" height=400></a>
-            </p>
-        </div>
-
-
     </body>
 </html>
