--- a/assignment5.html
+++ b/assignment5.html
@@ -31,7 +31,7 @@
         <div class="header h1">
             <h2>Schematic</h2>
             <p>
-            <img src="a5_schem.jpg" width=400></a>
+            <img src="a5_schem.jpg" height=400></a>
             </p>
         </div>
 
