--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <div class="assignment">
                 <a href="assignment5.html"><h2>Assignment 5: Motors</h2></a>
             </div>
+
+            <div class="assignment">
+                <a href="finalproject.html"><h2>Final Project (in progress!)</h2></a>
+            </div>
 	</div>
     </body>
 </html>
