updated fp idea

--- a/finalproject.html
+++ b/finalproject.html
@@ -12,7 +12,7 @@
     <body> 
         <div class="header">
             <h1>Final Project Idea</h1>
-            <p>My idea (for now) is something I can stick into food as it cools down and have different LED's signify how close the food is to being at the desired temperature.</p>>
-        </div>
+            <p>My idea (for now) is something I can stick into food as it cools down and have different LED's signify how close the food is to being at the desired temperature.</p>
+        </div> 
     </body>
 </html>
