--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             </div>
 
             <div class="assignment">
+                <a href="assignment6.html"><h2>Assignment 6: Datalogging</h2></a>
+            </div>
+
+            <div class="assignment">
                 <a href="finalproject.html"><h2>Final Project (in progress!)</h2></a>
             </div>
 	</div>
