--- a/assignment6.html
+++ b/assignment6.html
@@ -17,21 +17,21 @@
         <div class="header">
             <h2>Circuit Operation</h2>
             <p>
-                <img src="a5_operation.gif" width=600></a>
+
             </p>
         </div>
 
         <div class="header">
-            <h2>Code Snippet</h2>
+            <h2>Arduino Code</h2>
             <p>
-            <img src="a5_code.png" width=600></a>
+                <img src="a6arduino_code.png" height=400></a>
             </p>
         </div>
 
         <div class="header h1">
             <h2>Schematic</h2>
             <p>
-            <img src="a5_schem.jpg" height=400></a>
+
             </p>
         </div>
 
