--- a/assignment6.html
+++ b/assignment6.html
@@ -15,9 +15,9 @@
         </div>
         
         <div class="header">
-            <h2>Circuit Operation</h2>
+            <h2>Operation</h2>
             <p>
-
+in progress
             </p>
         </div>
 
@@ -28,10 +28,17 @@
             </p>
         </div>
 
+        <div class="header">
+            <h2>p5 Code</h2>
+            <p>
+in progress
+            </p>
+        </div>
+
         <div class="header h1">
             <h2>Schematic</h2>
             <p>
-
+                <img src="a6schem.jpg" height=600></a>
             </p>
         </div>
 
