--- a/assignment6.html
+++ b/assignment6.html
@@ -45,7 +45,7 @@ in progress
         <div class="header">
             <h2>p5 Code</h2>
             <p>
-in progress
+                <img src="a6p5_code.png" height=400></a>            
             </p>
         </div>
     </body>
