--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             </div>
 
             <div class="assignment">
+                <a href="assignment8.html"><h2>Assignment 8: Soldering</h2></a>
+            </div>
+
+            <div class="assignment">
                 <a href="finalproject.html"><h2>Final Project (in progress!)</h2></a>
             </div>
 	</div>
