--- a/assignment8.html
+++ b/assignment8.html
@@ -17,8 +17,10 @@
         <div class="header">
             <h2>Circuit</h2>
             <p>
+            I soldered a LED circuit with a LED and resistor. Below is the top view and a close up of the soldered pieces on the bottom.
             <img src="a8_circ1.jpg" height=400></a>
             <img src="a8_circ2.jpg" height=400></a>
+            <img src="a8_schem.jpg" height=400></a>
             </p>
         </div>        
     </body>
