--- a/finalproject.html
+++ b/finalproject.html
@@ -4,15 +4,37 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Assignment 5: Motors</title> 
+        <title>Final Project</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
     </head> 
     <body> 
         <div class="header">
-            <h1>Final Project Idea</h1>
-            <p>My idea (for now) is something I can stick into food as it cools down and have different LED's signify how close the food is to being at the desired temperature.</p>
+            <h1>Lost and Found Box</h1>
+            <p>Concept</p>
+        </div> 
+
+        <div class="header h1">
+            <h2>Demo Video</h2>
+            <p><video width="320" height="240" controls>
+                <source src="439demo.mp4" type="video/mp4">
+              </video></p>
+        </div> 
+
+        <div class="header h1">
+            <h2>Technical Implementation & Reflection</h2>
+            <p></p>
+        </div> 
+
+        <div class="header h1">
+            <h2>Schematic</h2>
+            <p><img src="final_schem.jpg" width=600></a></p>
+        </div> 
+
+        <div class="header h1">
+            <h2>Code</h2>
+            <p></p>
         </div> 
     </body>
 </html>
