--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="assignment">
-                <a href="finalproject.html"><h2>Final Project (in progress!)</h2></a>
+                <a href="finalproject.html"><h2>Final Project</h2></a>
             </div>
 	</div>
     </body>
