--- a/finalproject.html
+++ b/finalproject.html
@@ -17,7 +17,7 @@
 
         <div class="header h1">
             <h2>Demo Video</h2>
-            <p><video width="320" height="240" controls>
+            <p><video>
                 <source src="439demo.mp4" type="video/mp4">
               </video></p>
         </div> 
