--- a/finalproject.html
+++ b/finalproject.html
@@ -12,12 +12,12 @@
     <body> 
         <div class="header">
             <h1>Lost and Found Box</h1>
-            <p>Concept</p>
+            <p>My project was motivated by a friend who had trouble finding their glasses in the morning. I felt challenged to design a solution for people with impaired vision to not only have a consistent place to put their items, but have it be easily identified with visiual cues. This solution became the Lost and Found Box: a 3D printed box that is wrapped by an LED strip. </p>
         </div> 
 
         <div class="header h1">
             <h2>Demo Video</h2>
-            <p><video>
+            <p><video width=600 controls>
                 <source src="439demo.mp4" type="video/mp4">
               </video></p>
         </div> 
